--- a/contentaholic/templates/index.html
+++ b/contentaholic/templates/index.html
@@ -5,6 +5,6 @@
 {% endblock %}
 {% block content %}
     {% for source in sources %}
-        <h2>{{ source.url }}</h2>
+    <a href="{{ source.url }}">{{ source.name }}</a>
     {% endfor %}
 {% endblock %}
